--- a/cryptonews/Base.lproj/Main.storyboard
+++ b/cryptonews/Base.lproj/Main.storyboard
@@ -451,7 +451,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cvg-jx-iYZ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="25" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -533,10 +533,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Cvg-jx-iYZ" firstAttribute="bottom" secondItem="GMp-zP-O91" secondAttribute="bottom" id="4fi-Af-scu"/>
+                            <constraint firstItem="Cvg-jx-iYZ" firstAttribute="bottom" secondItem="GMp-zP-O91" secondAttribute="bottom" constant="5" id="4fi-Af-scu"/>
                             <constraint firstItem="Cvg-jx-iYZ" firstAttribute="trailing" secondItem="GMp-zP-O91" secondAttribute="trailing" id="ENV-8u-iIW"/>
                             <constraint firstItem="Cvg-jx-iYZ" firstAttribute="leading" secondItem="GMp-zP-O91" secondAttribute="leading" id="On1-O0-nc1"/>
-                            <constraint firstItem="Cvg-jx-iYZ" firstAttribute="top" secondItem="GMp-zP-O91" secondAttribute="top" id="UWF-aO-fWi"/>
+                            <constraint firstItem="Cvg-jx-iYZ" firstAttribute="top" secondItem="GMp-zP-O91" secondAttribute="top" constant="5" id="UWF-aO-fWi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GMp-zP-O91"/>
                     </view>
