--- a/cryptonews/Base.lproj/Main.storyboard
+++ b/cryptonews/Base.lproj/Main.storyboard
@@ -127,6 +127,7 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="bookmarkButton" destination="1sf-Up-W9k" id="n6v-TV-BAr"/>
+                                            <outlet property="dateLabel" destination="CgV-6A-fqS" id="sEh-ae-k3k"/>
                                             <outlet property="imageView" destination="jOR-Cl-F4r" id="t6W-IN-4o7"/>
                                             <outlet property="publisher" destination="9LO-X0-Jyt" id="ssg-ol-vaO"/>
                                             <outlet property="secondShadowView" destination="Mh0-Ks-afn" id="BWr-gP-erH"/>
@@ -336,32 +337,31 @@
                                         <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paul Giamatti" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KnB-C8-O6o">
-                                        <rect key="frame" x="16" y="61.5" width="343" height="26.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
-                                        <color key="textColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygk-2g-hTx">
-                                        <rect key="frame" x="16" y="112" width="343" height="39"/>
+                                        <rect key="frame" x="16" y="110.5" width="343" height="39"/>
                                         <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         <dataDetectorType key="dataDetectorTypes" link="YES" address="YES" calendarEvent="YES"/>
                                     </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jun 4, 2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAo-Uq-fNs">
+                                        <rect key="frame" x="16" y="63.5" width="102.5" height="23"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                                        <color key="textColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="ygk-2g-hTx" firstAttribute="top" secondItem="fAo-Uq-fNs" secondAttribute="bottom" constant="24" id="311-Uw-TiT"/>
                                     <constraint firstAttribute="trailing" secondItem="j9b-Je-iIC" secondAttribute="trailing" constant="16" id="7WJ-TQ-pBr"/>
+                                    <constraint firstItem="fAo-Uq-fNs" firstAttribute="top" secondItem="j9b-Je-iIC" secondAttribute="bottom" constant="16" id="BIH-1c-58U"/>
                                     <constraint firstItem="ygk-2g-hTx" firstAttribute="centerX" secondItem="a3Q-nW-KEW" secondAttribute="centerX" id="I4b-qk-pLg"/>
-                                    <constraint firstItem="KnB-C8-O6o" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="JBn-Y9-FLW"/>
                                     <constraint firstItem="ygk-2g-hTx" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="OXv-Ff-omd"/>
-                                    <constraint firstItem="ygk-2g-hTx" firstAttribute="top" secondItem="KnB-C8-O6o" secondAttribute="bottom" constant="24" id="Tad-9b-ZX3"/>
+                                    <constraint firstItem="fAo-Uq-fNs" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="SVZ-2Q-xf0"/>
                                     <constraint firstItem="j9b-Je-iIC" firstAttribute="top" secondItem="a3Q-nW-KEW" secondAttribute="top" constant="16" id="U4O-f9-l6t"/>
                                     <constraint firstItem="j9b-Je-iIC" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="Yb1-R6-87W"/>
                                     <constraint firstAttribute="bottom" secondItem="ygk-2g-hTx" secondAttribute="bottom" constant="32" id="im2-kA-uO9"/>
-                                    <constraint firstItem="KnB-C8-O6o" firstAttribute="top" secondItem="j9b-Je-iIC" secondAttribute="bottom" constant="14" id="oPt-CP-jLs"/>
-                                    <constraint firstAttribute="trailing" secondItem="KnB-C8-O6o" secondAttribute="trailing" constant="16" id="p9c-vd-lsH"/>
                                     <constraint firstAttribute="trailing" secondItem="ygk-2g-hTx" secondAttribute="trailing" constant="16" id="t4c-kq-Sam"/>
                                 </constraints>
                             </scrollView>
@@ -428,9 +428,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="authorLabel" destination="KnB-C8-O6o" id="g9S-Ku-Dx3"/>
                         <outlet property="bookmarkButton" destination="zph-Wj-DRO" id="kDb-53-Opn"/>
                         <outlet property="bottomView" destination="eR0-9t-Fnk" id="Ira-ct-qHy"/>
+                        <outlet property="dateLabel" destination="fAo-Uq-fNs" id="4tt-eO-gsX"/>
                         <outlet property="menuViewBottomConstraint" destination="yP9-Rw-x7X" id="r7O-7N-Vd3"/>
                         <outlet property="scrollView" destination="a3Q-nW-KEW" id="deK-qe-lU9"/>
                         <outlet property="shareButton" destination="Wcg-Uo-Bo2" id="7tt-Lc-aed"/>
