--- a/cryptonews/Base.lproj/Main.storyboard
+++ b/cryptonews/Base.lproj/Main.storyboard
@@ -332,21 +332,24 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin reaches all time high" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9b-Je-iIC">
-                                        <rect key="frame" x="16" y="16" width="343" height="31.5"/>
+                                        <rect key="frame" x="16" y="20" width="343" height="31.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                         <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygk-2g-hTx">
-                                        <rect key="frame" x="16" y="110.5" width="343" height="39"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygk-2g-hTx">
+                                        <rect key="frame" x="16" y="114.5" width="343" height="300"/>
                                         <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="300" id="6mn-gE-tPE"/>
+                                        </constraints>
                                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         <dataDetectorType key="dataDetectorTypes" link="YES" address="YES" calendarEvent="YES"/>
                                     </textView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jun 4, 2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAo-Uq-fNs">
-                                        <rect key="frame" x="16" y="63.5" width="102.5" height="23"/>
+                                        <rect key="frame" x="16" y="68" width="343" height="23"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                                         <color key="textColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -356,11 +359,12 @@
                                     <constraint firstItem="ygk-2g-hTx" firstAttribute="top" secondItem="fAo-Uq-fNs" secondAttribute="bottom" constant="24" id="311-Uw-TiT"/>
                                     <constraint firstAttribute="trailing" secondItem="j9b-Je-iIC" secondAttribute="trailing" constant="16" id="7WJ-TQ-pBr"/>
                                     <constraint firstItem="fAo-Uq-fNs" firstAttribute="top" secondItem="j9b-Je-iIC" secondAttribute="bottom" constant="16" id="BIH-1c-58U"/>
-                                    <constraint firstItem="ygk-2g-hTx" firstAttribute="centerX" secondItem="a3Q-nW-KEW" secondAttribute="centerX" id="I4b-qk-pLg"/>
+                                    <constraint firstItem="j9b-Je-iIC" firstAttribute="top" secondItem="a3Q-nW-KEW" secondAttribute="top" constant="20" id="G41-0w-chl"/>
+                                    <constraint firstAttribute="trailing" secondItem="fAo-Uq-fNs" secondAttribute="trailing" constant="16" id="JxW-6c-otp"/>
                                     <constraint firstItem="ygk-2g-hTx" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="OXv-Ff-omd"/>
                                     <constraint firstItem="fAo-Uq-fNs" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="SVZ-2Q-xf0"/>
-                                    <constraint firstItem="j9b-Je-iIC" firstAttribute="top" secondItem="a3Q-nW-KEW" secondAttribute="top" constant="16" id="U4O-f9-l6t"/>
                                     <constraint firstItem="j9b-Je-iIC" firstAttribute="leading" secondItem="a3Q-nW-KEW" secondAttribute="leading" constant="16" id="Yb1-R6-87W"/>
+                                    <constraint firstItem="ygk-2g-hTx" firstAttribute="centerX" secondItem="a3Q-nW-KEW" secondAttribute="centerX" id="fPS-gl-kDw"/>
                                     <constraint firstAttribute="bottom" secondItem="ygk-2g-hTx" secondAttribute="bottom" constant="32" id="im2-kA-uO9"/>
                                     <constraint firstAttribute="trailing" secondItem="ygk-2g-hTx" secondAttribute="trailing" constant="16" id="t4c-kq-Sam"/>
                                 </constraints>
@@ -435,6 +439,7 @@
                         <outlet property="scrollView" destination="a3Q-nW-KEW" id="deK-qe-lU9"/>
                         <outlet property="shareButton" destination="Wcg-Uo-Bo2" id="7tt-Lc-aed"/>
                         <outlet property="textView" destination="ygk-2g-hTx" id="lzO-41-Nva"/>
+                        <outlet property="textViewHeightConstraint" destination="6mn-gE-tPE" id="xFh-P5-ZHz"/>
                         <outlet property="titleLabel" destination="j9b-Je-iIC" id="aUo-Rg-Sgz"/>
                     </connections>
                 </viewController>
